# llvm-compiler-projects

./: README.md
adce-pass/: ADCEPass.cpp  ADCEPass.h  Assignment3.cpp  test1.ll  test1.opt.ll  test2.ll  test2.opt.ll
ir-generator/: CMakeLists.txt  IRGenerator.cpp
ir-generator/examples/: test.cpp  test.ir
source-to-source/: Assignment1 (3).cpp  CMakeLists.txt  SourceToSource.cpp
source-to-source/examples/: after.c  before.c
